<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/player_select" />
    <ListView android:id="@+id/playerList"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="fill"  android:layout_weight="1.0"/>
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/player_create" />
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText android:id="@+id/playerName"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="0.5" />
        <Button android:id="@+id/playerButton"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:layout_weight="1.0" android:text="@string/player_new" />
    </LinearLayout>
</LinearLayout>
